@@ -92,8 +92,11 @@ public class TimezoneConverter<R extends ConnectRecord<R>> implements Transforma
     private String convertedTimezone;
     private List<String> includeList;
     private List<String> excludeList;
-    private static final String SOURCE = "source";
+    private static final String SOURCE = Envelope.FieldName.SOURCE;
     private static final String TOPIC = "topic";
+    private static final String FIELD_SOURCE_PREFIX = Envelope.FieldName.SOURCE + ".";
+    private static final String FIELD_BEFORE_PREFIX = Envelope.FieldName.BEFORE + ".";
+    private static final String FIELD_AFTER_PREFIX = Envelope.FieldName.AFTER + ".";
     private static final Pattern TIMEZONE_OFFSET_PATTERN = Pattern.compile("^[+-]\\d{2}:\\d{2}(:\\d{2})?$");
     private static final Pattern LIST_PATTERN = Pattern.compile("^\\[(source|topic|[\".\\w\\s_]+):([\".\\w\\s_]+(?::[\".\\w\\s_]+)?(?:,|]$))+$");
     private final Map<String, Set<String>> topicFieldsMap = new HashMap<>();
@@ -128,8 +131,6 @@ public class TimezoneConverter<R extends ConnectRecord<R>> implements Transforma
         }
 
         Struct value = (Struct) record.value();
-        Schema schema = value.schema();
-
         String table = getTableFromSource(value);
         String topic = record.topic();
 
@@ -190,19 +191,25 @@ public class TimezoneConverter<R extends ConnectRecord<R>> implements Transforma
                 if (!topicFieldsMap.containsKey(matchName)) {
                     topicFieldsMap.put(matchName, new HashSet<>());
                 }
-                topicFieldsMap.get(matchName).add(field);
+                if (field != null) {
+                    topicFieldsMap.get(matchName).add(field);
+                }
             }
             else if (Objects.equals(commonPrefix, SOURCE)) {
                 if (!tableFieldsMap.containsKey(matchName)) {
                     tableFieldsMap.put(matchName, new HashSet<>());
                 }
-                tableFieldsMap.get(matchName).add(field);
+                if (field != null) {
+                    tableFieldsMap.get(matchName).add(field);
+                }
             }
             else {
                 if (!noPrefixFieldsMap.containsKey(matchName)) {
                     noPrefixFieldsMap.put(matchName, new HashSet<>());
                 }
-                noPrefixFieldsMap.get(matchName).add(field);
+                if (field != null) {
+                    noPrefixFieldsMap.get(matchName).add(field);
+                }
             }
         }
     }
@@ -307,12 +314,38 @@ public class TimezoneConverter<R extends ConnectRecord<R>> implements Transforma
 
         Struct before = getStruct(value, Envelope.FieldName.BEFORE);
         Struct after = getStruct(value, Envelope.FieldName.AFTER);
+        Struct source = getStruct(value, Envelope.FieldName.SOURCE);
+
+        Set<String> beforeFields = new HashSet<>();
+        Set<String> afterFields = new HashSet<>();
+        Set<String> sourceFields = new HashSet<>();
+
+        if (!fields.isEmpty()) {
+            for (String field : fields) {
+                if (field.startsWith(FIELD_SOURCE_PREFIX)) {
+                    sourceFields.add(field.substring(FIELD_SOURCE_PREFIX.length()));
+                }
+                else if (field.startsWith(FIELD_BEFORE_PREFIX)) {
+                    beforeFields.add(field.substring(FIELD_BEFORE_PREFIX.length()));
+                }
+                else if (field.startsWith(FIELD_AFTER_PREFIX)) {
+                    afterFields.add(field.substring(FIELD_AFTER_PREFIX.length()));
+                }
+                else {
+                    beforeFields.add(field);
+                    afterFields.add(field);
+                }
+            }
+        }
 
         if (before != null) {
-            handleValueForFields(before, type, fields);
+            handleValueForFields(before, type, beforeFields);
         }
         if (after != null) {
-            handleValueForFields(after, type, fields);
+            handleValueForFields(after, type, afterFields);
+        }
+        if (source != null && !sourceFields.isEmpty()) {
+            handleValueForFields(source, type, sourceFields);
         }
     }
 
@@ -472,7 +505,7 @@ public class TimezoneConverter<R extends ConnectRecord<R>> implements Transforma
         Set<String> fields = matchFieldsResult.getFields();
 
         if (matchName != null) {
-            if (!fields.contains(null)) {
+            if (!fields.isEmpty()) {
                 handleStructs(value, Type.INCLUDE, matchName, fields);
             }
             else {
@@ -480,7 +513,7 @@ public class TimezoneConverter<R extends ConnectRecord<R>> implements Transforma
             }
         }
         else {
-            handleStructs(value, Type.ALL, table, Set.of(""));
+            handleStructs(value, Type.ALL, table, Collections.emptySet());
         }
     }
 
@@ -490,16 +523,16 @@ public class TimezoneConverter<R extends ConnectRecord<R>> implements Transforma
         Set<String> fields = matchFieldsResult.getFields();
 
         if (matchName == null) {
-            handleStructs(value, Type.ALL, table != null ? table : topic, Set.of(""));
+            handleStructs(value, Type.ALL, table != null ? table : topic, Collections.emptySet());
         }
-        else if (!fields.contains(null)) {
+        else if (!fields.isEmpty()) {
             handleStructs(value, Type.EXCLUDE, matchName, fields);
         }
     }
 
     private void handleAllRecords(Struct value, String table, String topic) {
         if (!topicFieldsMap.containsKey(topic) && !tableFieldsMap.containsKey(table) && !noPrefixFieldsMap.containsKey(table)) {
-            handleStructs(value, Type.ALL, table != null ? table : topic, Set.of(""));
+            handleStructs(value, Type.ALL, table != null ? table : topic, Collections.emptySet());
         }
     }
 }
